include $(top_srcdir)/config/common.am

if INSTALL_MACOSX
SUBDIRS = MacOSX
endif

if INSTALL_CYGWIN
SUBDIRS = cygwin
endif

EXTRA_DIST = coding/Rules coding/Recommendations \
	FORMAT lyx.rpm.README \
	lyxserver lyx.spec.in lyx.spec \
	LyX-Mac-binary-release.sh \
tools/convert_kmap.py \
tools/gen_lfuns.py \
tools/generate_symbols_list.py \
tools/unicodesymbols.py \
tools/x-font \
tools/README \
tools/count_total_lines_of_compiled_code.sh \
tools/count_lines_of_included_code.sh \
tools/lyxeditor \
Win32/packaging/icons/lyx_doc.svg \
Win32/packaging/icons/lyx_32x32.png \
Win32/packaging/icons/lyx_doc_32x32.png \
Win32/packaging/icons/lyx.ico \
Win32/packaging/icons/lyx_32x32.ico \
Win32/packaging/icons/lyx_32x32_16colors.png \
Win32/packaging/icons/lyx.svg \
Win32/packaging/icons/lyx_doc_32x32.ico \
Win32/packaging/icons/lyx_doc_32x32_16colors.png \
Win32/packaging/installer/graphics/header.bmp \
Win32/packaging/installer/graphics/wizard.bmp \
Win32/packaging/installer/gui/external.nsh \
Win32/packaging/installer/include/declarations.nsh \
Win32/packaging/installer/include/detection.nsh \
Win32/packaging/installer/include/filelist.nsh \
Win32/packaging/installer/include/gui.nsh \
Win32/packaging/installer/include/init.nsh \
Win32/packaging/installer/include/nsis.nsh \
Win32/packaging/installer/include/variables.nsh \
Win32/packaging/installer/lang/english.nsh \
Win32/packaging/installer/lang/french.nsh \
Win32/packaging/installer/lang/german.nsh \
Win32/packaging/installer/lang/italian.nsh \
Win32/packaging/installer/license.rtf \
Win32/packaging/installer/lyx.nsi \
Win32/packaging/installer/settings.nsh \
Win32/packaging/installer/setup/configure.nsh \
Win32/packaging/installer/setup/install.nsh \
Win32/packaging/installer/setup/uninstall.nsh \
Win32/packaging/AltInstaller/Aspell.nsh \
Win32/packaging/AltInstaller/Build-all.nsi \
Win32/packaging/AltInstaller/ChangeLog.txt \
Win32/packaging/AltInstaller/ConfigLyX.nsh \
Win32/packaging/AltInstaller/Deleted.nsh \
Win32/packaging/AltInstaller/InstallActions-complete-small.nsh \
Win32/packaging/AltInstaller/InstallActions-update.nsh \
Win32/packaging/AltInstaller/InstallThirdPartyProgs.nsh \
Win32/packaging/AltInstaller/io_latex.ini \
Win32/packaging/AltInstaller/io_missing_progs.ini \
Win32/packaging/AltInstaller/io_ui_language.ini \
Win32/packaging/AltInstaller/LanguageSettings.nsh \
Win32/packaging/AltInstaller/LaTeX.nsh \
Win32/packaging/AltInstaller/LaTeXFolder.nsh \
Win32/packaging/AltInstaller/Launch.nsi \
Win32/packaging/AltInstaller/License.txt \
Win32/packaging/AltInstaller/LyXInstaller-complete.nsi \
Win32/packaging/AltInstaller/LyXInstaller-small.nsi \
Win32/packaging/AltInstaller/LyXInstaller-update.nsi \
Win32/packaging/AltInstaller/LyXUtils.nsh \
Win32/packaging/AltInstaller/MissingPrograms.nsh \
Win32/packaging/AltInstaller/ReadmeComplete1.6.txt \
Win32/packaging/AltInstaller/ReadmePackage1.6.txt \
Win32/packaging/AltInstaller/ReadmeScripts1.6.txt \
Win32/packaging/AltInstaller/ReadmeSmall1.6.txt \
Win32/packaging/AltInstaller/ReadmeUpdate1.6.txt \
Win32/packaging/AltInstaller/registry.nsh \
Win32/packaging/AltInstaller/Settings.nsh \
Win32/packaging/AltInstaller/Updated.nsh \
Win32/packaging/AltInstaller/Uninstall.nsh \
Win32/packaging/AltInstaller/icons/Lydia.svg \
Win32/packaging/AltInstaller/icons/lyx.ico \
Win32/packaging/AltInstaller/icons/lyx.svg \
Win32/packaging/AltInstaller/icons/lyx_32x32.ico \
Win32/packaging/AltInstaller/icons/lyx_doc.svg \
Win32/packaging/AltInstaller/icons/lyx_logo_hi.bmp \
Win32/packaging/AltInstaller/informations/InstallerStructure.odg \
Win32/packaging/AltInstaller/informations/InstallerStructure.pdf \
Win32/packaging/AltInstaller/informations/ISO_3166.html \
Win32/packaging/AltInstaller/informations/WindowsCodePages.txt \
Win32/packaging/AltInstaller/informations/WinLangCode.htm \
Win32/packaging/AltInstaller/informations/iso639.htm \
Win32/packaging/AltInstaller/lyx_languages/Encodings.txt \
Win32/packaging/AltInstaller/lyx_languages/czech.nsh \
Win32/packaging/AltInstaller/lyx_languages/danish.nsh \
Win32/packaging/AltInstaller/lyx_languages/dutch.nsh \
Win32/packaging/AltInstaller/lyx_languages/english.nsh \
Win32/packaging/AltInstaller/lyx_languages/french.nsh \
Win32/packaging/AltInstaller/lyx_languages/galician.nsh \
Win32/packaging/AltInstaller/lyx_languages/german.nsh \
Win32/packaging/AltInstaller/lyx_languages/hungarian.nsh \
Win32/packaging/AltInstaller/lyx_languages/italian.nsh \
Win32/packaging/AltInstaller/lyx_languages/japanese.nsh \
Win32/packaging/AltInstaller/lyx_languages/norwegian.nsh \
Win32/packaging/AltInstaller/lyx_languages/polish.nsh \
Win32/packaging/AltInstaller/lyx_languages/portuguese.nsh \
Win32/packaging/AltInstaller/lyx_languages/romanian.nsh \
Win32/packaging/AltInstaller/lyx_languages/slovak.nsh \
Win32/packaging/AltInstaller/lyx_languages/spanish.nsh \
Win32/packaging/AltInstaller/lyx_languages/swedish.nsh \
Win32/packaging/AltInstaller/lyx_languages/turkish.nsh \
Win32/packaging/AltInstaller/specials/Launcher/lyxLauncher.cfg \
Win32/packaging/AltInstaller/specials/Launcher/lyxLauncher.dof \
Win32/packaging/AltInstaller/specials/Launcher/lyxLauncher.dpr \
Win32/packaging/AltInstaller/specials/Launcher/lyxLauncher.exe \
Win32/packaging/AltInstaller/specials/Launcher/lyxLauncher.res \
Win32/packaging/AltInstaller/specials/PDFViewWin/pdfclose.exe \
Win32/packaging/AltInstaller/specials/PDFViewWin/pdfdde.exe \
Win32/packaging/AltInstaller/specials/PDFViewWin/pdfopen.exe \
Win32/packaging/AltInstaller/specials/PDFViewWin/PDFViewWin.cfg \
Win32/packaging/AltInstaller/specials/PDFViewWin/PDFViewWin.dof \
Win32/packaging/AltInstaller/specials/PDFViewWin/PDFViewWin.dpr \
Win32/packaging/AltInstaller/specials/PDFViewWin/PDFViewWin.exe \
Win32/packaging/AltInstaller/specials/PDFViewWin/PDFViewWin.res \
Win32/packaging/AltInstaller/specials/AspellRepositories.txt \
Win32/packaging/AltInstaller/specials/AspellDictionaryNames.txt \
Win32/pdfview/pdfview.nsi \
Win32/packaging/installer/lyx.nsi.cmake \
Win32/packaging/installer/settings.nsh.cmake \
Win32/vld/cmake/CMakeLists.txt \
Win32/vld/cmake/vld.cmake \
cmake/ConfigureChecks.cmake \
cmake/Install.cmake \
cmake/LyxPackaging.cmake \
cmake/PyCompile.cmake \
cmake/config.cpp.cmake \
cmake/config.h.cmake \
cmake/configCompiler.h.cmake \
cmake/doc/CMakeLists.txt \
cmake/doc/ReplaceValues.pl \
cmake/doc/ReplaceValues.py \
cmake/lyx_date.h.cmake \
cmake/man/CMakeLists.txt \
cmake/modules/FindASPELL.cmake \
cmake/modules/FindAiksaurusLIB.cmake \
cmake/modules/FindEnchant.cmake \
cmake/modules/FindGNUWIN32.cmake \
cmake/modules/FindHunspell.cmake \
cmake/modules/FindICONV.cmake \
cmake/modules/FindLibintl.cmake \
cmake/modules/FindLyXGettext.cmake \
cmake/modules/FindMagic.cmake \
cmake/modules/FindMyThesLIB.cmake \
cmake/modules/FindOpenSSL.cmake \
cmake/modules/FindQt4.cmake \
cmake/modules/FindZLIB.cmake \
cmake/modules/LyXMacros.cmake \
cmake/modules/LyXPaths.cmake \
cmake/modules/LyXuic.cmake \
cmake/modules/MacroBoolTo01.cmake \
cmake/modules/PCHSupport_26.cmake \
cmake/modules/ProjectSourceGroup.cmake \
cmake/po/cat.py \
cmake/po/dos2unix.py \
cmake/po/unix2dos.py
