include $(top_srcdir)/config/common.am

if INSTALL_MACOSX
SUBDIRS = MacOSX
endif

if INSTALL_CYGWIN
SUBDIRS = cygwin
endif

EXTRA_DIST = coding/Rules coding/Recommendations \
	FORMAT lyx.rpm.README \
	lyxserver lyx.spec.in lyx.spec \
	LyX-Mac-binary-release.sh \
tools/convert_kmap.py \
tools/gen_lfuns.py \
tools/generate_symbols_images.lyx \
tools/generate_symbols_images.py \
tools/generate_symbols_list.py \
tools/unicodesymbols.py \
tools/x-font \
tools/README \
tools/count_total_lines_of_compiled_code.sh \
tools/count_lines_of_included_code.sh \
tools/lyxeditor \
Win32/packaging/icons/lyx_doc.svg \
Win32/packaging/icons/lyx_32x32.png \
Win32/packaging/icons/lyx_doc_32x32.png \
Win32/packaging/icons/lyx.ico \
Win32/packaging/icons/lyx_32x32.ico \
Win32/packaging/icons/lyx_32x32_16colors.png \
Win32/packaging/icons/lyx.svg \
Win32/packaging/icons/lyx_doc_32x32.ico \
Win32/packaging/icons/lyx_doc_32x32_16colors.png \
Win32/packaging/installer/graphics/header.bmp \
Win32/packaging/installer/graphics/wizard.bmp \
Win32/packaging/installer/gui/external.nsh \
Win32/packaging/installer/gui/io_latex.ini \
Win32/packaging/installer/gui/LaTeXFolder.nsh \
Win32/packaging/installer/include/declarations.nsh \
Win32/packaging/installer/include/declarations.nsh.cmake \
Win32/packaging/installer/include/detection.nsh \
Win32/packaging/installer/include/dictionaries.nsh \
Win32/packaging/installer/include/filelist.nsh \
Win32/packaging/installer/include/gui.nsh \
Win32/packaging/installer/include/init.nsh \
Win32/packaging/installer/include/LaTeX.nsh \
Win32/packaging/installer/include/LyXUtils.nsh \
Win32/packaging/installer/include/nsis.nsh \
Win32/packaging/installer/include/variables.nsh \
Win32/packaging/installer/lang/arabic.nsh \
Win32/packaging/installer/lang/basque.nsh \
Win32/packaging/installer/lang/catalan.nsh \
Win32/packaging/installer/lang/czech.nsh \
Win32/packaging/installer/lang/danish.nsh \
Win32/packaging/installer/lang/dutch.nsh \
Win32/packaging/installer/lang/english.nsh \
Win32/packaging/installer/lang/french.nsh \
Win32/packaging/installer/lang/galician.nsh \
Win32/packaging/installer/lang/german.nsh \
Win32/packaging/installer/lang/hungarian.nsh \
Win32/packaging/installer/lang/indonesian.nsh \
Win32/packaging/installer/lang/italian.nsh \
Win32/packaging/installer/lang/japanese.nsh \
Win32/packaging/installer/lang/norwegian.nsh \
Win32/packaging/installer/lang/polish.nsh \
Win32/packaging/installer/lang/portuguese.nsh \
Win32/packaging/installer/lang/romanian.nsh \
Win32/packaging/installer/lang/slovak.nsh \
Win32/packaging/installer/lang/spanish.nsh \
Win32/packaging/installer/lang/swedish.nsh \
Win32/packaging/installer/lang/turkish.nsh \
Win32/packaging/installer/lang/ukrainian.nsh \
Win32/packaging/installer/setup/configure.nsh \
Win32/packaging/installer/setup/install.nsh \
Win32/packaging/installer/setup/uninstall.nsh \
Win32/packaging/installer/ChangeLog.txt \
Win32/packaging/installer/DictionaryMirrors.txt \
Win32/packaging/installer/HunspellDictionaryNames.txt \
Win32/packaging/installer/license.rtf \
Win32/packaging/installer/lyx.nsi \
Win32/packaging/installer/lyx.nsi.cmake \
Win32/packaging/installer/lyx-bundle.nsi \
Win32/packaging/installer/lyx-standard.nsi \
Win32/packaging/installer/settings.nsh \
Win32/packaging/installer/settings.nsh.cmake \
Win32/packaging/installer/ThesaurusDictionaryNames.txt \
Win32/pdfview/pdfview.nsi \
Win32/vld/cmake/CMakeLists.txt \
Win32/vld/cmake/vld.cmake \
autotests/CMakeLists.txt \
autotests/check_load.cmake \
autotests/export.cmake \
autotests/ExportTests.cmake \
autotests/keytest.py \
autotests/lyx2lyxtest.cmake \
autotests/single-test.cmake \
autotests/xvkbd/CMakeLists.txt \
checkurls/CMakeLists.txt \
checkurls/CheckURL.pm \
checkurls/search_url.pl \
cmake/ConfigureChecks.cmake \
cmake/Install.cmake \
cmake/LyxPackaging.cmake \
cmake/LyX_description.txt \
cmake/LyX_license.txt \
cmake/LyX_summary.txt \
cmake/PyCompile.cmake \
cmake/config.cpp.cmake \
cmake/config.h.cmake \
cmake/configCompiler.h.cmake \
cmake/configFunctions.cmake \
cmake/configIncludes.cmake \
cmake/doc/CMakeLists.txt \
cmake/doc/ReplaceValues.pl \
cmake/doc/ReplaceValues.py \
cmake/lyx_date.h.cmake \
cmake/lyx.rc \
cmake/man/CMakeLists.txt \
cmake/modules/FindASPELL.cmake \
cmake/modules/FindAiksaurusLIB.cmake \
cmake/modules/FindEnchant.cmake \
cmake/modules/FindCXX11Compiler.cmake \
cmake/modules/FindGNUWIN32.cmake \
cmake/modules/FindHunspell.cmake \
cmake/modules/FindICONV.cmake \
cmake/modules/FindLyXGettext.cmake \
cmake/modules/FindMagic.cmake \
cmake/modules/FindMyThesLIB.cmake \
cmake/modules/FindOpenSSL.cmake \
cmake/modules/FindQt4.cmake \
cmake/modules/FindZLIB.cmake \
cmake/modules/LyXMacros.cmake \
cmake/modules/LyXPaths.cmake \
cmake/modules/LyXuic.cmake \
cmake/modules/MacroBoolTo01.cmake \
cmake/modules/PCHSupport_26.cmake \
cmake/modules/ProjectSourceGroup.cmake \
cmake/pcheaders.h \
cmake/po/cat.py \
cmake/po/dos2unix.py \
cmake/po/unix2dos.py \
cmake/post_install/CMakeLists.txt \
cmake/scripts/LyXCreateImagesResource.cmake \
cmake/scripts/LyXGetVersion.cmake \
keystest/cache-bisect.py \
keystest/keytest.py \
keystest/make_screenshot_html.py
