include $(top_srcdir)/config/common.am

if INSTALL_MACOSX
SUBDIRS = MacOSX
endif

if INSTALL_CYGWIN
SUBDIRS = cygwin
endif

EXTRA_DIST = coding/Rules coding/Recommendations \
	coverity_modeling.cpp \
	FORMAT lyx.rpm.README \
	lyxserver lyx.spec.in lyx.spec \
	LyX-Mac-binary-release.sh \
	LyX-Mac-frameworks-template.plist \
tools/gen_lfuns.py \
tools/generate_symbols_images.lyx \
tools/generate_symbols_images.py \
tools/generate_symbols_list.py \
tools/generate_symbols_svg.lyx \
tools/mergepo.py \
tools/unicodesymbols.py \
tools/updatedocs.py \
tools/updatelayouts.py \
tools/x-font \
tools/README \
tools/count_total_lines_of_compiled_code.sh \
tools/count_lines_of_included_code.sh \
tools/lyxeditor \
Win32/lyxrc.dist.in \
Win32/pdfview/pdfview-old.nsi \
Win32/pdfview/pdfview.nsi \
Win32/vld/cmake \
Win32/vld/cmake/vld.cmake \
Win32/vld/cmake/CMakeLists.txt \
Win32/vld/vld.ini \
Win32/vld/COPYING.txt \
Win32/vld/src \
Win32/vld/src/crtmfcpatch.h \
Win32/vld/src/vld.h \
Win32/vld/src/ntapi.h \
Win32/vld/src/set.h \
Win32/vld/src/vldheap.cpp \
Win32/vld/src/map.h \
Win32/vld/src/utility.h \
Win32/vld/src/vldheap.h \
Win32/vld/src/resource.h \
Win32/vld/src/vld.cpp \
Win32/vld/src/callstack.h \
Win32/vld/src/vldapi.cpp \
Win32/vld/src/utility.cpp \
Win32/vld/src/ntapi.cpp \
Win32/vld/src/callstack.cpp \
Win32/vld/src/vldint.h \
Win32/vld/src/tree.h \
Win32/vld/CHANGES.txt \
Win32/vld/README.html \
Win32/packaging/icons/lyx.ico \
Win32/packaging/icons/lyx_doc.ico \
Win32/packaging/icons/lyx_doc_32x32.ico \
Win32/packaging/icons/lyx_32x32.ico \
Win32/packaging/icons/lyx.svg \
Win32/packaging/icons/lyx_doc.svg \
Win32/packaging/icons/lyx_32x32_16colors.png \
Win32/packaging/icons/Lydia.svg \
Win32/packaging/icons/lyx_32x32.png \
Win32/packaging/icons/lyx_doc_32x32_16colors.png \
Win32/packaging/icons/lyx_doc_32x32.png \
Win32/packaging/installer/Readme.txt \
Win32/packaging/installer/lyx_standard.nsi \
Win32/packaging/installer/src/CustomPages \
Win32/packaging/installer/src/CustomPages/LaTeXFolder.nsddef \
Win32/packaging/installer/src/CustomPages/LaTeXFolder.nsdinc \
Win32/packaging/installer/src/main.nsh \
Win32/packaging/installer/src/dictionaries.nsh \
Win32/packaging/installer/src/lang/english.nsh \
Win32/packaging/installer/src/lang/TranslatedLanguages.nsh \
Win32/packaging/installer/src/lang/german.nsh \
Win32/packaging/installer/src/lang/arabic.nsh \
Win32/packaging/installer/src/lang/galician.nsh \
Win32/packaging/installer/src/lang/turkish.nsh \
Win32/packaging/installer/src/lang/japanese.nsh \
Win32/packaging/installer/src/lang/catalan.nsh \
Win32/packaging/installer/src/lang/indonesian.nsh \
Win32/packaging/installer/src/lang/italian.nsh \
Win32/packaging/installer/src/lang/portuguese.nsh \
Win32/packaging/installer/src/lang/spanish.nsh \
Win32/packaging/installer/src/lang/dutch.nsh \
Win32/packaging/installer/src/lang/french.nsh \
Win32/packaging/installer/src/lang/swedish.nsh \
Win32/packaging/installer/src/lang/ukrainian.nsh \
Win32/packaging/installer/src/lang/hungarian.nsh \
Win32/packaging/installer/src/lang/basque.nsh \
Win32/packaging/installer/src/lang/slovak.nsh \
Win32/packaging/installer/src/lang/czech.nsh \
Win32/packaging/installer/src/lang/russian.nsh \
Win32/packaging/installer/src/lang/romanian.nsh \
Win32/packaging/installer/src/lang/norwegian.nsh \
Win32/packaging/installer/src/lang/portugueseBR.nsh \
Win32/packaging/installer/src/lang/polish.nsh \
Win32/packaging/installer/src/lang/danish.nsh \
Win32/packaging/installer/graphics/wizard.bmp \
Win32/packaging/installer/graphics/header.bmp \
Win32/packaging/installer/license.rtf \
Win32/packaging/installer/ChangeLog.txt \
Win32/packaging/dependencies/imagemagickConvert.bat \
Win32/packaging/information/ISO_3166.html \
Win32/packaging/information/iso639.htm \
Win32/packaging/information/WinLangCode.htm \
autotests/CMakeLists.txt \
autotests/check_load.cmake \
autotests/export.cmake \
autotests/ExportTests.cmake \
autotests/keytest.py \
autotests/lyx2lyxtest.cmake \
autotests/ignoredTests \
autotests/ignoreLatexErrorsTests \
autotests/invertedTests \
autotests/suspendedTests \
autotests/unreliableTests \
autotests/lyxStatus.pm \
autotests/getTempDir.pl \
autotests/useSystemFonts.pl \
autotests/single-test.cmake \
autotests/xvkbd/CMakeLists.txt \
autotests/xvkbd/findwidget.c \
autotests/xvkbd/resources.h \
autotests/xvkbd/XVkbd-common.h \
autotests/xvkbd/xvkbd.c \
autotests/xvkbd/xvkbd.xbm \
autotests/xvkbd/iconify.xbm \
autotests/xvkbd/xvkbd_icon.xbm \
autotests/xvkbd/xvkbd_iconmask.xbm \
batchtests/CMakeLists.txt \
batchtests/beamer_test.lyx \
batchtests/beamer_test.tex.orig \
batchtests/vcs_info_export.lyx \
batchtests/vcs_info_export.tex.orig \
checkurls/CMakeLists.txt \
checkurls/CheckURL.pm \
checkurls/search_url.pl \
cmake/ConfigureChecks.cmake \
cmake/Install.cmake \
cmake/LyxPackaging.cmake \
cmake/LyX_description.txt \
cmake/LyX_license.txt \
cmake/LyX_summary.txt \
cmake/PyCompile.cmake \
cmake/TODO.txt \
cmake/build5-2015.bat \
cmake/build5-2015-installer.bat \
cmake/config.cpp.cmake \
cmake/config.h.cmake \
cmake/lyx_commit_hash.h.cmake \
cmake/configCompiler.h.cmake \
cmake/configCompiler.h.msvc \
cmake/configFunctions.cmake \
cmake/configIncludes.cmake \
cmake/doc/CMakeLists.txt \
cmake/doc/ReplaceValues.cmake \
cmake/doc/ReplaceValues.pl \
cmake/doc/ReplaceValues.py \
cmake/lyx_date.h.cmake \
cmake/lyx.rc \
cmake/man/CMakeLists.txt \
cmake/mingw.bat \
cmake/modules/FindASPELL.cmake \
cmake/modules/FindAiksaurusLIB.cmake \
cmake/modules/FindENCHANT.cmake \
cmake/modules/FindCXX11Compiler.cmake \
cmake/modules/FindGNUWIN32.cmake \
cmake/modules/FindHUNSPELL.cmake \
cmake/modules/FindICONV.cmake \
cmake/modules/FindLyXGettext.cmake \
cmake/modules/FindMagic.cmake \
cmake/modules/FindMYTHESLIB.cmake \
cmake/modules/FindOpenSSL.cmake \
cmake/modules/FindQt4.cmake \
cmake/modules/FindZLIB.cmake \
cmake/modules/LyXDestinations.cmake \
cmake/modules/LyXMacros.cmake \
cmake/modules/LyXPaths.cmake \
cmake/modules/LyXuic.cmake \
cmake/modules/MacroBoolTo01.cmake \
cmake/modules/PCHSupport_26.cmake \
cmake/modules/ProjectSourceGroup.cmake \
cmake/pcheaders.h \
cmake/po/cat.py \
cmake/po/unix2dos.py \
cmake/post_install/CMakeLists.txt \
cmake/scripts/LyXGetVersion.cmake \
cmake/scripts/xmingw \
keystest/cache-bisect.py \
keystest/keytest.py \
keystest/make_screenshot_html.py

